tests/errors/ref_misspelled_function.js
function calculateTotal() {
  return 42;
}
calculatTotal();
